Improve document access, export, and UI formatting
ConsoleClient: minor formatting fix — prepend a newline when calling printPrettyJson for notification output.

WorkflowService: add validation to prevent creating a document whose title matches an existing document that already has an APPROVED version; enhance exportVersionToText to produce a more detailed, human-readable TXT layout (adds description, author, date, separators, and clearer labels).

DocumentController: require X-User-Id header in getAllDocuments, filter out documents for which the requesting user has no visible versions (using canViewVersion), return latest visible version info, and include version ID in history entries. Several stream/collection calls adjusted to use explicit collectors.